# routers/commentsRouter_controllers.go
@@ -16,13 +16,23 @@ func init() {
             Filters: nil,
             Params: nil})
 
+    beego.GlobalControllerRouter["APINoiTu/controllers:HomeController"] = append(beego.GlobalControllerRouter["APINoiTu/controllers:HomeController"],
+        beego.ControllerComments{
+            Method: "ViewHome",
+            Router: "/",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
     beego.GlobalControllerRouter["APINoiTu/controllers:RoomController"] = append(beego.GlobalControllerRouter["APINoiTu/controllers:RoomController"],
         beego.ControllerComments{
             Method: "GETRoomId",
-            Router: "/:roomId",
+            Router: "/:roomId/:username",
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(
 				param.New("roomId", param.IsRequired, param.InPath),
+				param.New("username", param.IsRequired, param.InPath),
 			),
             Filters: nil,
             Params: nil})
@@ -30,10 +40,11 @@ func init() {
     beego.GlobalControllerRouter["APINoiTu/controllers:RoomController"] = append(beego.GlobalControllerRouter["APINoiTu/controllers:RoomController"],
         beego.ControllerComments{
             Method: "WS",
-            Router: "/ws/:roomId",
+            Router: "/ws/:roomId/:username",
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(
 				param.New("roomId", param.IsRequired, param.InPath),
+				param.New("username", param.IsRequired, param.InPath),
 			),
             Filters: nil,
             Params: nil})
